--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <title>Tossa</title>
+    <title>Tossa Mar 360 Vixtu WebVR</title>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/nunjucks/2.3.0/nunjucks.min.js"></script>
     <script type="text/javascript" src="https://aframe.io/releases/0.4.0/aframe.min.js"></script>
@@ -66,7 +66,7 @@
 
         <!-- VIDEOS -->
 
-        <video id="other360" loop="true" src="../../videos/beshopper/ShopingIphone-Apple%20Devices%20HD%20(Most%20Compatible).m4v" webkit-playsinline controls autobuffer preload="metadata|auto">
+        <video id="other360" loop="true" src="../../videos/tossamar/TossaMarLandscape.mp4" webkit-playsinline controls autobuffer preload="metadata|auto">
         </video>
 
 
