--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <title>Tossa Mar 360 Vixtu WebVR</title>
+    <title>Android - IPhone Dev</title>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/nunjucks/2.3.0/nunjucks.min.js"></script>
     <script type="text/javascript" src="https://aframe.io/releases/0.4.0/aframe.min.js"></script>
 
     <!-- <script src="../../stereo/examples/build.js"></script>-->
 
-   <!-- <script src="../../lib/vixtuvrEngine.js"></script>-->
+    <!-- <script src="../../lib/vixtuvrEngine.js"></script>-->
 
     <script type="text/javascript" src="../../lib/miniCore.js"></script>
 
@@ -18,7 +18,7 @@
 
     <script type="text/javascript" src="../../components/set-video2.js"></script>
 
-    <script type="text/javascript" src="../../components/change-scene.js"></script>
+    <script type="text/javascript" src="../../components/change-scene2.js"></script>
 
     <!-- CSS -->
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Raleway:400,300,100,600">
@@ -46,31 +46,37 @@
          inspector="url: https://aframe.io/releases/0.3.0/aframe-inspector.min.js"
          keyboard-shortcuts="" screenshot="" vr-mode-ui="">
 
-    <!--
+<!--
 ******************************************************************************************************************************************************************************************
-        ASSETS
+    ASSETS
 /*****************************************************************************************************************************************************************************************
 -->
-    <a-assets timeout="3000">
+<a-assets timeout="3000">
 
-        <audio id="click-sound" src="../../audio/MenuSelect.ogg"></audio>
+    <audio id="click-sound" src="../../audio/MenuSelect.ogg"></audio>
 
-        <img id="test_img" crossorigin="anonymous" src="../../img/test.png">
+    <img id="test_img" crossorigin="anonymous" src="../../img/test.png">
 
-        <!-- MARKERS -->
+    <!-- MARKERS -->
 
-        <img id="amarker" crossorigin="anonymous" src="../../img/A_Marker_Transp.png">
-        <img id="bmarker" crossorigin="anonymous" src="../../img/B_Marker_Transp.png">
-        <img id="cmarker" crossorigin="anonymous" src="../../img/C_Marker_Transp.png">
-        <img id="rmarker" crossorigin="anonymous" src="../../img/R_Marker_Transp.png">
+    <img id="amarker" crossorigin="anonymous" src="../../img/A_Marker_Transp.png">
+    <img id="bmarker" crossorigin="anonymous" src="../../img/B_Marker_Transp.png">
+    <img id="cmarker" crossorigin="anonymous" src="../../img/C_Marker_Transp.png">
+    <img id="rmarker" crossorigin="anonymous" src="../../img/R_Marker_Transp.png">
 
-        <!-- VIDEOS -->
+    <!-- VIDEOS -->
+    <!--
+    src: ../../videos/bedoctor/HipVideoUnity.mp4
+    src: ../../videos/bedoctor/Dicom_TimeLapse.mp4
+    src: ../../videos/bedoctor/ZimmerTools.mp4
+    -->
 
-        <video id="other360" loop="true" src="../../videos/tossamar/TossaMarLandscape.mp4" webkit-playsinline controls autobuffer preload="metadata|auto">
-        </video>
+    <video id="other360" loop="true" src="../../videos/bedoctor/360SurgeonOneMinute_1136_640.mp4" webkit-playsinline
+           controls autobuffer preload="metadata|auto">
+    </video>
 
 
-        <script id="linkTemplate" type="text/nunjucks">
+    <script id="linkTemplate" type="text/nunjucks">
                      <a-entity class="link" rotation="{{rotation}}">
                         <a-curvedimage id="{{first}}"  material="shader: flat; src: {{ thumb }}"
                             radius="5.7" theta-length="34" height=".85" rotation="{{rotchild}}" position="{{position}}"
@@ -87,9 +93,10 @@
                             <a-animation attribute="rotation" from="0 0 0" to="0 -360 0" begin="0" dur="160000" repeat="infinite" easing="linear"></a-animation>
                      </a-curvedimage>
                     </a-entity>
+
         </script>
 
-        <script id="linkButtons" type="text/nunjucks">
+    <script id="linkButtons" type="text/nunjucks">
                      <a-entity class="link" rotation="{{rotation}}">
                         <a-curvedimage id="{{first}}"  material="shader: flat; src: {{ thumb }}"
                             radius="5.7" theta-length="10" height=".85" rotation="{{rotchild}}" position="{{position}}"
@@ -105,59 +112,73 @@
                             >
                      </a-curvedimage>
                     </a-entity>
+
         </script>
 
+    <script id="linkButtonsChangeScene" type="text/nunjucks">
+                     <a-entity class="link" rotation="{{rotation}}">
+                        <a-curvedimage id="{{first}}"  material="shader: flat; src: {{ thumb }}"
+                            radius="5.7" theta-length="10" height=".85" rotation="{{rotchild}}" position="{{position}}"
+                            scale=".4 .4 .4"  opacity=".8"
+                            event-set__1="_event: mousedown; scale: 0.4 0.4 0.4"
+                            event-set__2="_event: mouseup; scale: 0.41 0.41 0.41"
+                            event-set__3="_event: mouseenter; scale: 0.41 0.41 0.41"
+                            event-set__4="_event: mouseleave; scale: 0.4 0.4 0.4"
+                            change-scene="on : click; scene: {{scene}}"
 
-    </a-assets>
+
+                            set-video="on: click; target: {{target}}; src: {{ src }}"
+                            sound="on: click; src: #click-sound"
+                            >
+                     </a-curvedimage>
+                    </a-entity>
+
+        </script>
+    <!--  set-video="on: click; target: {{target}}; src: {{ src }}" -->
+
+</a-assets>
+<!--
+******************************************************************************************************************************************************************************************
+    END ASSETS
+/*****************************************************************************************************************************************************************************************
+-->
+
+<a-entity id="Scene_one_parent" active visible position="0 0 0">
+    <!--
+    <a-plane id="plane" scale="8 5 1" material="shader: flat; src: #video360;" position="0 1 -6"
+            ></a-plane>
+    -->
+    <a-videosphere id="videosphere" rotation="0 -110 0" active visible src="#other360"
+                   autoplay="false"></a-videosphere>
+
     <!--
     ******************************************************************************************************************************************************************************************
-        END ASSETS
+            BUTTONS
     /*****************************************************************************************************************************************************************************************
     -->
+    <a-entity id="buttons_scene_one" position="0 0.5 0" active visible>
 
-    <a-entity id="Scene_one_parent" active visible position="0 0 0">
+        <a-entity template="src: #linkButtonsChangeScene" id="buttonone" data-thumb="#amarker" data-target="#planeVideo2L"
+                  data-src="../../videos/bedoctor/HipVideoUnity.mp4"
+                  data-first="imgButton1" data-rotation="0 0 0" data-position="-0.18 0.35 -5"
+                  data-scene="2"></a-entity>
 
-        <a-videosphere id="videosphere" rotation="0 -110 0" active visible src="#other360"
-                       autoplay="false"></a-videosphere>
+        <a-entity template="src: #linkButtonsChangeScene" id="buttontwo" data-thumb="#bmarker" data-target="#planeVideo3"
+                  data-src="../../videos/bedoctor/Dicom_TimeLapse.mp4"
+                  data-first="imgButton2" data-rotation="0 0 0" data-rotchild="0 180 0" data-position="-1.8 1.65 -2"
+                  data-scene="3"></a-entity>
 
-        <!--
-        ******************************************************************************************************************************************************************************************
-                BUTTONS
-        /*****************************************************************************************************************************************************************************************
-        -->
-        <a-entity id="buttons_scene_one" position="0 0.5 0" active visible>
-
-
-            <a-entity id="links3" position="0 -1.5 0"> <!-- layout="layout: line; margin: 1.5" -->
-                <!-- 8 angles 0, -40, -80, -120, -160, -200, -240, -280, -320 -->
-                <a-entity template="src: #linkTemplate" id="btn1" data-src="../../videos/beshopper/ShopingIphone-Apple%20Devices%20HD%20(Most%20Compatible).m4v" data-thumb="#test_img"
-                          data-first="maphallbutton1" data-rotation="0 0 0"></a-entity>
-                <a-entity template="src: #linkTemplate" id="btn2" data-src="../../videos/bedoctor/360SurgeonOneMinute_1136_640.mp4" data-thumb="#test_img"
-                          data-first="maphallbutton2" data-rotation="0 -40 0"></a-entity>
-                <a-entity template="src: #linkTemplate" id="btn3" data-src="../../videos/others/ciudad_paneles_EDO_19201080.mp4" data-thumb="#test_img"
-                          data-first="maphallbutton3" data-rotation="0 -80 0"></a-entity>
-                <a-entity template="src: #linkTemplate" id="btn4" data-src="../../videos/beshopper/ShopingIphone-Apple%20Devices%20HD%20(Most%20Compatible).m4v" data-thumb="#test_img"
-                          data-first="maphallbutton4" data-rotation="0 -120 0"></a-entity>
-                <a-entity template="src: #linkTemplate" id="btn5" data-src="../../videos/bedoctor/360SurgeonOneMinute_1136_640.mp4" data-thumb="#test_img"
-                          data-first="maphallbutton5" data-rotation="0 -160 0"></a-entity>
-                <a-entity template="src: #linkTemplate" id="btn6" data-src="../../videos/others/ciudad_paneles_EDO_19201080.mp4" data-thumb="#test_img"
-                          data-first="maphallbutton6" data-rotation="0 -200 0"></a-entity>
-                <a-entity template="src: #linkTemplate" id="btn7" data-src="../../videos/beshopper/ShopingIphone-Apple%20Devices%20HD%20(Most%20Compatible).m4v" data-thumb="#test_img"
-                          data-first="maphallbutton7" data-rotation="0 -240 0"></a-entity>
-                <a-entity template="src: #linkTemplate" id="btn8" data-src="../../videos/bedoctor/360SurgeonOneMinute_1136_640.mp4" data-thumb="#test_img"
-                          data-first="maphallbutton8" data-rotation="0 -280 0"></a-entity>
-                <a-entity template="src: #linkTemplate" id="btn9" data-src="../../videos/others/ciudad_paneles_EDO_19201080.mp4" data-thumb="#test_img"
-                          data-first="maphallbutton9" data-rotation="0 -320 0"></a-entity>
-            </a-entity>
-
-        </a-entity>
-
-        <!--
-        ******************************************************************************************************************************************************************************************
-            END BUTTONS
-        /*****************************************************************************************************************************************************************************************
-        -->
+        <a-entity template="src: #linkButtonsChangeScene" id="buttonthree" data-thumb="#cmarker" data-target="#planeVideo4"
+                  data-src="../../videos/bedoctor/ZimmerTools.mp4"
+                  data-first="imgButton3" data-rotation="0 0 0" data-rotchild="45 180 0" data-position="0.5 1 0"
+                  data-scene="4"></a-entity>
     </a-entity>
+
+    <!--
+    ******************************************************************************************************************************************************************************************
+        END BUTTONS
+    /*****************************************************************************************************************************************************************************************
+    -->
 
 
     <!--
@@ -165,7 +186,7 @@
             CAMERA
     /*****************************************************************************************************************************************************************************************
     -->
-    <a-camera camera active="true" visible="true" position="0 0.5 0" id="player" collider-check>
+    <a-camera camera active="true" visible="true" position="0 0.5 0" id="player1" collider-check>
         <a-cursor active visible id="cursor1" event-set__1="_event:mouseenter; color: springgreen"
                   event-set__2="_event: mouseleave; color: blue" raycaster="objects: .link" material="" cursor=""
                   geometry="" position="" rotation="" scale color="blue">
@@ -188,6 +209,65 @@
             END CAMERA
     /*****************************************************************************************************************************************************************************************
     -->
+</a-entity>
+
+
+<a-entity id="Scene_two_parent" active visible position="0 0 0">
+
+    <a-camera visible="false" active="false" id="player2" position="0 0 0" stereocam="eye:left;">
+        <a-cursor id="cursor2" visible active color="red"></a-cursor>
+    </a-camera>
+
+    <a-entity id="links2" active visible position="0 0 0">
+        <!-- material="shader: flat; src: #hipsbs; repeat: 0.5 1"  -->
+        <a-plane id="planeVideo2L" scale="8 5 1" material="shader: flat; repeat: 0.5 1; src:#other360" position="0 1 -6"
+                 stereo="eye:left"></a-plane>
+        <a-plane id="planeVideo2R" scale="8 5 1" material="shader: flat; repeat:-0.5 1; src:#other360" position="0 1 -6"
+                 stereo="eye:right"></a-plane>
+
+        <a-entity template="src: #linkButtonsChangeScene" id="buttonback2" data-thumb="#rmarker" data-target="#videosphere"
+                  data-src="../../videos/bedoctor/360SurgeonOneMinute_1136_640.mp4"
+                  data-first="imgButtonback2" data-rotation="0 180 0" data-position="-0.18 0.25 0" data-scene="1"></a-entity>
+    </a-entity>
+</a-entity>
+
+<a-entity id="Scene_three_parent" active visible position="0 0 0">
+
+    <a-entity id="links3" active visible position="0 0 0">
+        <!-- shader: flat; src: #dicom; -->
+        <a-plane id="planeVideo3" scale="8 5 1" material="shader:flat; src:#other360" position="0 1 -6"
+                ></a-plane>
+
+        <a-entity template="src: #linkButtonsChangeScene" id="buttonback3" data-thumb="#rmarker" data-target="#videosphere"
+                  data-src="../../videos/bedoctor/360SurgeonOneMinute_1136_640.mp4"
+                  data-first="imgButtonback3" data-rotation="0 180 0" data-position="-0.18 0.25 0" data-scene="1"></a-entity>
+    </a-entity>
+
+
+    <a-camera visible="false" active="false" id="player3" position="0 0 0">
+        <a-cursor id="cursor3" visible active color="blue"></a-cursor>
+    </a-camera>
+
+</a-entity>
+
+<a-entity id="Scene_four_parent" active visible position="0 0 0">
+
+    <a-entity id="links4" active visible position="0 0 0">
+        <!-- material="shader: flat; src: #tools;" -->
+        <a-plane id="planeVideo4" scale="8 5 1" material="shader:flat; src:#other360" position="0 1 -6"
+                ></a-plane>
+
+        <a-entity template="src: #linkButtonsChangeScene" id="buttonback4" data-thumb="#rmarker" data-target="#videosphere"
+                  data-src="../../videos/bedoctor/360SurgeonOneMinute_1136_640.mp4"
+                  data-first="imgButtonback4" data-rotation="0 180 0" data-position="-0.18 0.25 0" data-scene="1"></a-entity>
+    </a-entity>
+
+
+    <a-camera visible="false" active="false" id="player4" position="0 0 0">
+        <a-cursor id="cursor4" visible active color="blue"></a-cursor>
+    </a-camera>
+
+</a-entity>
 
 </a-scene>
 
@@ -204,7 +284,7 @@
     var scene = document.querySelector("a-scene");
     var videos = document.getElementsByTagName("video");
 
-    console.log("is mobile: "+checkUserAgent() + " "+TYPE_AGENT);
+    console.log("is mobile: " + checkUserAgent() + " " + TYPE_AGENT);
 
     if (scene.hasLoaded) {
         console.log("LOADED");
@@ -219,10 +299,14 @@
         //setVisibleComponent("tempvideosphere");
     }
 
-    initScene = function() {
+    initScene = function () {
         //custom init
-    };
+        setVisibleComponent("Scene_one_parent", true);
+        setVisibleComponent("Scene_two_parent", false);
+        setVisibleComponent("Scene_three_parent", false);
+        setVisibleComponent("Scene_four_parent", false);
 
+    };
 
 </script>
 
