Added thumbs images for Tossa

--- a/index.html
+++ b/index.html
@@ -59,10 +59,13 @@
 
     <!-- MARKERS -->
 
-    <img id="amarker" crossorigin="anonymous" src="../../img/A_Marker_Transp.png">
-    <img id="bmarker" crossorigin="anonymous" src="../../img/B_Marker_Transp.png">
-    <img id="cmarker" crossorigin="anonymous" src="../../img/C_Marker_Transp.png">
-    <img id="rmarker" crossorigin="anonymous" src="../../img/R_Marker_Transp.png">
+    <img id="TossaLandscapeThumb" crossorigin="anonymous" src="../../img/TossaLandscapeThumb.png">
+    <img id="TossaGhoticChurchMainThumb" crossorigin="anonymous" src="../../img/TossaGhoticChurchMainThumb.png">
+    <img id="SofiaRestaurantThumb" crossorigin="anonymous" src="../../img/SofiaRestaurantThumb.png">
+    <img id="CookingMuseumIndoorThumb" crossorigin="anonymous" src="../../img/CookingMuseumIndoorThumb.png">
+    <img id="DianaChimneyRoomThumb" crossorigin="anonymous" src="../../img/DianaChimneyRoomThumb.png">
+    <img id="DianaFountainThumb" crossorigin="anonymous" src="../../img/DianaFountainThumb.png">
+    
 
     <!-- VIDEOS -->
     <!--
