Added code to index.html circular menu selector

--- a/index.html
+++ b/index.html
@@ -177,6 +177,28 @@
                   data-scene="4"></a-entity>
     </a-entity>
 
+    <a-entity id="persistentbuttons" position="0 -1.5 0"> <!-- layout="layout: line; margin: 1.5" -->
+        <!-- 6 angles 0, -60, -120, -180, -240, -300, -280, -320 -->
+        <a-entity template="src: #linkButtonsChangeScene" id="btn1" data-src="../../videos/tossamar/TossaMarLandscape.mp4" data-thumb="#TossaLandscapeThumb"
+                  data-first="maphallbutton1" data-rotation="0 0 0"></a-entity>
+        <a-entity template="src: #linkButtonsChangeScene" id="btn2" data-src="../../videos/tossamar/TossaMarGhoticChurchMain.mp4" data-thumb="#TossaGhoticChurchMainThumb"
+                  data-first="maphallbutton2" data-rotation="0 -40 0"></a-entity>
+        <a-entity template="src: #linkButtonsChangeScene" id="btn3" data-src="../../videos/tossamar/Granados360.mp4" data-thumb="#SofiaRestaurantThumb"
+                  data-first="maphallbutton3" data-rotation="0 -80 0"></a-entity>
+        <a-entity template="src: #linkButtonsChangeScene" id="btn4" data-src="../../videos/tossamar/GranadosTerraceOne.mp4" data-thumb="#SofiaChillOutThumb"
+                  data-first="maphallbutton4" data-rotation="0 -120 0"></a-entity>
+        <a-entity template="src: #linkButtonsChangeScene" id="btn5" data-src="../../videos/tossamar/DianaChimney.mp4" data-thumb="#DianaChimneyRoomThumb"
+                  data-first="maphallbutton5" data-rotation="0 -160 0"></a-entity>
+        <a-entity template="src: #linkButtonsChangeScene" id="btn6" data-src="../../videos/tossamar/DianaSolarium.mp4" data-thumb="#DianaFountainThumb"
+                  data-first="maphallbutton6" data-rotation="0 -200 0"></a-entity>
+    </a-entity>
+
+</a-entity>
+
+
+
+
+
     <!--
     ******************************************************************************************************************************************************************************************
         END BUTTONS
