Added thumb nail for Sofia Chill Out

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <img id="TossaLandscapeThumb" crossorigin="anonymous" src="../../img/TossaLandscapeThumb.png">
     <img id="TossaGhoticChurchMainThumb" crossorigin="anonymous" src="../../img/TossaGhoticChurchMainThumb.png">
     <img id="SofiaRestaurantThumb" crossorigin="anonymous" src="../../img/SofiaRestaurantThumb.png">
+    <img id="SofiaChillOutThumb" crossorigin="anonymous" src="../../img/SofiaChillOutThumb.png">
     <img id="CookingMuseumIndoorThumb" crossorigin="anonymous" src="../../img/CookingMuseumIndoorThumb.png">
     <img id="DianaChimneyRoomThumb" crossorigin="anonymous" src="../../img/DianaChimneyRoomThumb.png">
     <img id="DianaFountainThumb" crossorigin="anonymous" src="../../img/DianaFountainThumb.png">
@@ -177,7 +178,7 @@
                   data-scene="4"></a-entity>
     </a-entity>
 
-    <a-entity id="persistentbuttons" position="0 -1.5 0"> <!-- layout="layout: line; margin: 1.5" -->
+    <a-entity id="persistentbuttons" position="0 1.5 0"> <!-- layout="layout: line; margin: 1.5" -->
         <!-- 6 angles 0, -60, -120, -180, -240, -300, -280, -320 -->
         <a-entity template="src: #linkButtonsChangeScene" id="btn1" data-src="../../videos/tossamar/TossaMarLandscape.mp4" data-thumb="#TossaLandscapeThumb"
                   data-first="maphallbutton1" data-rotation="0 0 0"></a-entity>
