--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                             set-video="on: click; target: {{target}}; src: {{ src }}"
                             sound="on: click; src: #click-sound"
                             >
+                            <a-animation attribute="rotation" from="0 0 0" to="0 -360 0" begin="0" dur="160000" repeat="infinite" easing="linear"></a-animation>
                      </a-curvedimage>
                     </a-entity>
 
@@ -153,7 +154,7 @@
             ></a-plane>
     -->
     <a-videosphere id="videosphere" rotation="0 -110 0" active visible src="#other360"
-                   autoplay="false"></a-videosphere>
+                   autoplay="false" data-set-image-fade-setup="true" animation__fade=""></a-videosphere>
 
     <!--
     ******************************************************************************************************************************************************************************************
@@ -164,17 +165,17 @@
 
     <a-entity id="persistentbuttons" position="0 1.5 0"> <!-- layout="layout: line; margin: 1.5" -->
         <!-- 5 angles 0, -60, -120, -180, -240, -300 -->
-        <a-entity template="src: #linkButtonsChangeScene" id="btn1" data-src="../../videos/tossamar/TossaMarLandscape.mp4" data-thumb="#TossaLandscapeThumb"
-                  data-first="maphallbutton1" data-rotation="0 0 0"></a-entity>
-        <a-entity template="src: #linkButtonsChangeScene" id="btn2" data-src="../../videos/tossamar/TossaMarGhoticChurchMain.mp4" data-thumb="#TossaGhoticChurchMainThumb"
+        <a-entity template="src: #linkButtonsChangeScene" id="btn1" data-target="#videosphere" data-src="../../videos/tossamar/TossaMarLandscape.mp4" data-thumb="#TossaLandscapeThumb"
+                  data-first="maphallbutton1" data-rotation="0 0 0" data-target="#videosphere" data-src="../../videos/tossamar/TossaMarGhoticChurchMain.mp4"></a-entity>
+        <a-entity template="src: #linkButtonsChangeScene" id="btn2" data-target="#videosphere" data-src="../../videos/tossamar/TossaMarGhoticChurchMain.mp4" data-thumb="#TossaGhoticChurchMainThumb"
                   data-first="maphallbutton2" data-rotation="0 -60 0"></a-entity>
-        <a-entity template="src: #linkButtonsChangeScene" id="btn3" data-src="../../videos/tossamar/Granados360.mp4" data-thumb="#SofiaRestaurantThumb"
+        <a-entity template="src: #linkButtonsChangeScene" id="btn3" data-target="#videosphere" data-src="../../videos/tossamar/Granados360.mp4" data-thumb="#SofiaRestaurantThumb"
                   data-first="maphallbutton3" data-rotation="0 -120 0"></a-entity>
-        <a-entity template="src: #linkButtonsChangeScene" id="btn4" data-src="../../videos/tossamar/GranadosTerraceOne.mp4" data-thumb="#SofiaChillOutThumb"
+        <a-entity template="src: #linkButtonsChangeScene" id="btn4" data-target="#videosphere" data-src="../../videos/tossamar/GranadosTerraceOne.mp4" data-thumb="#SofiaChillOutThumb"
                   data-first="maphallbutton4" data-rotation="0 -180 0"></a-entity>
-        <a-entity template="src: #linkButtonsChangeScene" id="btn5" data-src="../../videos/tossamar/DianaChimney.mp4" data-thumb="#DianaChimneyRoomThumb"
+        <a-entity template="src: #linkButtonsChangeScene" id="btn5" data-target="#videosphere" data-src="../../videos/tossamar/DianaChimney.mp4" data-thumb="#DianaChimneyRoomThumb"
                   data-first="maphallbutton5" data-rotation="0 -240 0"></a-entity>
-        <a-entity template="src: #linkButtonsChangeScene" id="btn6" data-src="../../videos/tossamar/DianaSolarium.mp4" data-thumb="#DianaFountainThumb"
+        <a-entity template="src: #linkButtonsChangeScene" id="btn6" data-target="#videosphere" data-src="../../videos/tossamar/DianaSolarium.mp4" data-thumb="#DianaFountainThumb"
                   data-first="maphallbutton6" data-rotation="0 -300 0"></a-entity>
     </a-entity>
 
@@ -198,8 +199,8 @@
     -->
     <a-camera camera active="true" visible="true" position="0 0.5 0" id="player1" collider-check>
         <a-cursor active visible id="cursor1" event-set__1="_event:mouseenter; color: springgreen"
-                  event-set__2="_event: mouseleave; color: blue" raycaster="objects: .link" material="" cursor=""
-                  geometry="" position="" rotation="" scale color="blue">
+                  event-set__2="_event: mouseleave; color: orange" raycaster="objects: .link" material="" cursor=""
+                  geometry="" position="" rotation="" scale color="springgreen">
             <!--
             <a-animation begin="mouseenter" easing="ease-in" attribute="scale"
                          fill="backwards" from="1 1 1" to="0.1 0.1 0.1" dur="1500"></a-animation>
