--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             set-video="on: click; target: {{target}}; src: {{ src }}"
                             sound="on: click; src: #click-sound"
                             >
-                            <a-animation attribute="rotation" from="0 0 0" to="0 -360 0" begin="0" dur="160000" repeat="infinite" easing="linear"></a-animation>
+                            <a-animation attribute="rotation" from="0 0 0" to="0 -360 0" begin="0" dur="100000" repeat="infinite" easing="linear"></a-animation>
                      </a-curvedimage>
                     </a-entity>
 
@@ -198,7 +198,7 @@
     /*****************************************************************************************************************************************************************************************
     -->
     <a-camera camera active="true" visible="true" position="0 0.5 0" id="player1" collider-check>
-        <a-cursor active visible id="cursor1" event-set__1="_event:mouseenter; color: springgreen"
+        <a-cursor active visible id="cursor1" color="orange" event-set__1="_event:mouseenter; color: springgreen"
                   event-set__2="_event: mouseleave; color: orange" raycaster="objects: .link" material="" cursor=""
                   geometry="" position="" rotation="" scale color="springgreen">
             <!--
