--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 
     <!-- <script src="../../lib/vixtuvrEngine.js"></script>-->
 
-    <script type="text/javascript" src="../../lib/miniCore.js"></script>
+    <script type="text/javascript" src="../../lib/miniCore.min.js"></script>
 
     <script type="text/javascript" src="../../lib/kframe.min.js"></script>
 
-    <script type="text/javascript" src="../../components/set-video2.js"></script>
+    <script type="text/javascript" src="../../components/set-video2.min.js"></script>
 
-    <script type="text/javascript" src="../../components/change-scene2.js"></script>
+    <script type="text/javascript" src="../../components/change-scene2.min.js"></script>
+
+    <script type="text/javascript" src="../../components/aframe-stereo-component.min.js"></script>
 
     <!-- CSS -->
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Raleway:400,300,100,600">
@@ -31,7 +33,16 @@
     <!--apple-touch-icon-precomposed.png-->
     <link rel="shortcut icon" href="">
     <!-- favicon.ico -->
+    <script type="text/javascript">
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+        ga('create', 'UA-90430248-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 </head>
 
 <body>
@@ -67,6 +78,7 @@
     <img id="CookingMuseumIndoorThumb" crossorigin="anonymous" src="../../img/CookingMuseumIndoorThumb.png">
     <img id="DianaChimneyRoomThumb" crossorigin="anonymous" src="../../img/DianaChimneyRoomThumb.png">
     <img id="DianaFountainThumb" crossorigin="anonymous" src="../../img/DianaFountainThumb.png">
+    <img id="TossaOctopussyChefMarker" crossorigin="anonymous" src="../../img/TossaOctopussyChefMarker.png">
 
 
     <!-- VIDEOS -->
@@ -140,6 +152,28 @@
                     </a-entity>
 
         </script>
+
+
+    <script id="linkButtonsChangeSceneNoRotation" type="text/nunjucks">
+                     <a-entity class="link">
+                        <a-plane material="shader: flat; src: {{ thumb }}"
+                            height="1" width = "1"
+                            scale="1.0 1.0 1.0"  opacity="0.8"
+                            event-set__1="_event: mousedown; scale: 1.0 1.0 1.0"
+                            event-set__2="_event: mouseup; scale: 1.2 1.2 1.2"
+                            event-set__3="_event: mouseenter; scale: 1.2 1.2 1.2"
+                            event-set__4="_event: mouseleave; scale: 1.0 1.0 1.0"
+                            change-scene="on : click; scene: {{scene}}"
+
+
+                            set-video="on: click; target: {{target}}; src: {{ src }}"
+                            sound="on: click; src: #click-sound"
+                            >
+
+                     </a-curvedimage>
+                    </a-entity>
+
+        </script>
     <!--  set-video="on: click; target: {{target}}; src: {{ src }}" -->
 
 </a-assets>
@@ -149,7 +183,41 @@
 /*****************************************************************************************************************************************************************************************
 -->
 
+<!--
+******************************************************************************************************************************************************************************************
+        BUTTONS
+/*****************************************************************************************************************************************************************************************
+-->
+
+<!-- If the audio of the buttons is in the button, they must be near the listener to be audible-->
+
+<a-entity id="persistentbuttons" position="0 0.75 0"> <!-- layout="layout: line; margin: 1.5" -->
+    <!-- 5 angles 0, -60, -120, -180, -240, -300 -->
+    <a-entity template="src: #linkButtonsChangeScene" id="btn1" data-target="#videosphere" data-src="../../videos/tossamar/TossaMarLandscape.mp4" data-thumb="#TossaLandscapeThumb"
+              data-first="maphallbutton1" data-rotation="0 0 0" data-target="#videosphere" data-src="../../videos/tossamar/TossaMarGhoticChurchMain.mp4"></a-entity>
+    <a-entity template="src: #linkButtonsChangeScene" id="btn2" data-target="#videosphere" data-src="../../videos/tossamar/TossaMarGhoticChurchMain.mp4" data-thumb="#TossaGhoticChurchMainThumb"
+              data-first="maphallbutton2" data-rotation="0 -60 0"></a-entity>
+    <a-entity template="src: #linkButtonsChangeScene" id="btn3" data-target="#videosphere" data-src="../../videos/tossamar/Granados360.mp4" data-thumb="#SofiaRestaurantThumb"
+              data-first="maphallbutton3" data-rotation="0 -120 0" data-scene="2"></a-entity>
+    <a-entity template="src: #linkButtonsChangeScene" id="btn4" data-target="#videosphere" data-src="../../videos/tossamar/GranadosTerraceOne.mp4" data-thumb="#SofiaChillOutThumb"
+              data-first="maphallbutton4" data-rotation="0 -180 0"></a-entity>
+    <a-entity template="src: #linkButtonsChangeScene" id="btn5" data-target="#videosphere" data-src="../../videos/tossamar/DianaChimney.mp4" data-thumb="#DianaChimneyRoomThumb"
+              data-first="maphallbutton5" data-rotation="0 -240 0"></a-entity>
+    <a-entity template="src: #linkButtonsChangeScene" id="btn6" data-target="#videosphere" data-src="../../videos/tossamar/DianaSolarium.mp4" data-thumb="#DianaFountainThumb"
+              data-first="maphallbutton6" data-rotation="0 -300 0"></a-entity>
+</a-entity>
+
+
 <a-entity id="Scene_one_parent" active visible position="0 0 0">
+    <!--
+    <a-plane id="plane" scale="8 5 1" material="shader: flat; src: #video360;" position="0 1 -6"
+            ></a-plane>
+    -->
+    <a-videosphere id="videosphere" rotation="0 -110 0" active visible src="#other360"
+                   autoplay="false" data-set-image-fade-setup="true" animation__fade=""></a-videosphere>
+</a-entity>
+
+<a-entity id="Scene_two_parent" active visible position="0 0 0">
     <!--
     <a-plane id="plane" scale="8 5 1" material="shader: flat; src: #video360;" position="0 1 -6"
             ></a-plane>
@@ -163,26 +231,16 @@
     /*****************************************************************************************************************************************************************************************
     -->
 
+    <!-- If the audio of the buttons is in the button, they must be near the listener to be audible-->
 
-    <a-entity id="persistentbuttons" position="0 1.5 0"> <!-- layout="layout: line; margin: 1.5" -->
-        <!-- 5 angles 0, -60, -120, -180, -240, -300 -->
-        <a-entity template="src: #linkButtonsChangeScene" id="btn1" data-target="#videosphere" data-src="../../videos/tossamar/TossaMarLandscape.mp4" data-thumb="#TossaLandscapeThumb"
-                  data-first="maphallbutton1" data-rotation="0 0 0" data-target="#videosphere" data-src="../../videos/tossamar/TossaMarGhoticChurchMain.mp4"></a-entity>
-        <a-entity template="src: #linkButtonsChangeScene" id="btn2" data-target="#videosphere" data-src="../../videos/tossamar/TossaMarGhoticChurchMain.mp4" data-thumb="#TossaGhoticChurchMainThumb"
-                  data-first="maphallbutton2" data-rotation="0 -60 0"></a-entity>
-        <a-entity template="src: #linkButtonsChangeScene" id="btn3" data-target="#videosphere" data-src="../../videos/tossamar/Granados360.mp4" data-thumb="#SofiaRestaurantThumb"
-                  data-first="maphallbutton3" data-rotation="0 -120 0"></a-entity>
-        <a-entity template="src: #linkButtonsChangeScene" id="btn4" data-target="#videosphere" data-src="../../videos/tossamar/GranadosTerraceOne.mp4" data-thumb="#SofiaChillOutThumb"
-                  data-first="maphallbutton4" data-rotation="0 -180 0"></a-entity>
-        <a-entity template="src: #linkButtonsChangeScene" id="btn5" data-target="#videosphere" data-src="../../videos/tossamar/DianaChimney.mp4" data-thumb="#DianaChimneyRoomThumb"
-                  data-first="maphallbutton5" data-rotation="0 -240 0"></a-entity>
-        <a-entity template="src: #linkButtonsChangeScene" id="btn6" data-target="#videosphere" data-src="../../videos/tossamar/DianaSolarium.mp4" data-thumb="#DianaFountainThumb"
-                  data-first="maphallbutton6" data-rotation="0 -300 0"></a-entity>
+    <a-entity id="provisional_buttons_scene_two" position="0.75 2.25 -2.0" scale="0.5 0.5 0.5" active visible>
+
+        <a-entity template="src: #linkButtonsChangeSceneNoRotation" id="buttonone" data-thumb="#TossaOctopussyChefMarker" data-target="#videosphere"
+                  data-src="../../videos/tossamar/GranadosOctopusssySlaughter360.mp4">
+        </a-entity>
     </a-entity>
 
 </a-entity>
-
-
 
 
 
@@ -255,10 +313,13 @@
 
     initScene = function () {
         //custom init
+        changeTo(GameState.ONE);
         setVisibleComponent("Scene_one_parent", true);
-        //setVisibleComponent("Scene_two_parent", false);
+        setVisibleComponent("Scene_two_parent", false);
         //setVisibleComponent("Scene_three_parent", false);
         //setVisibleComponent("Scene_four_parent", false);
+
+        scaleComponent("Scene_two_parent", 0.0, 0.0, 0.0);
 
     };
 
